# cplusanalyze

./: .gitignore  README.md  pyproject.toml
cplusanalyze/: __init__.py  ai.py  analyzer.py  clang_analyzer.py  cli.py  report.py
examples/sample/: main.cpp
