[project]
name = "cplusanalyze"
version = "0.1.0"
description = "C++ static analysis and AI-assisted design document generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
cplusanalyze = "cplusanalyze.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
